--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -65,75 +65,14 @@
             <td class="text-center"><i class="fa fa-comments" aria-hidden="true"></i></td>
             <td>
                 <strong>Comments: </strong>0
-                <a href="#" style="margin-left: 20px;">Discuss this resource</a>
+                <a href="#comments" style="margin-left: 20px;">Discuss this resource</a>
             </td>
         </tr>
         <tr>
             <td class="text-center"><i class="fa fa-quote-right" aria-hidden="true"></i></td>
-            <td><a href="#">Cite this resource</a></td>
+            <td><a href="#citation">Cite this resource</a></td>
         </tr>
     </table>
-</div>
-<!-- Modal -->
-<div class="modal fade" id="profile-preview-modal" tabindex="-1" role="dialog" aria-labelledby="profileName"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="profile-badge-container">
-            <div class="profile-badge-header">
-                <div class="profile-pic round-image user-icon"></div>
-                <div class="external-profiles">
-                    <i class="identifier-icon ai ai-google-scholar-square"></i>
-                    <i class="identifier-icon ai ai-orcid"></i>
-                    <i class="identifier-icon ai ai-researchgate-square"></i>
-                    <img class="identifier-icon"
-                         src="{{ STATIC_URL }}img/researcherID.png"
-                         alt="ResearcherID icon"/>
-                    <i class="identifier-icon fa fa-address-card"></i>
-                </div>
-            </div>
-            <div class="profile-badge-content">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h2 data-name></h2>
-                    </div>
-                    <div class="col-xs-6">
-                        <table class="info-table">
-                            <tr>
-                                <td class="text-center"><i class="fa fa-envelope icon-blue" aria-hidden="true"></i></td>
-                                <td><span data-email></span></td>
-                            </tr>
-                            <tr>
-                                <td class="text-center"><i class="fa fa-map-marker icon-blue" aria-hidden="true"></i></td>
-                                <td><span data-state></span>, <span data-country></span></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="profile-badge-stat">
-                            <span data-contributions></span><span>Contributions</span>
-                        </div>
-
-                        <div class="profile-badge-stat">
-                            <span>Joined</span><span data-joined></span>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <br>
-                    <h4><span data-organization></span> | <span
-                            data-title></span>
-                    </h4>
-                    <div class="text-muted">Subject Areas:</div>
-                    <div data-subject-areas></div>
-                </div>
-
-                <hr>
-                <div>
-                    <a id="btn-preview-profile" href="#" class="btn btn-primary">View Profile</a>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 {% else %}
